# rRemediacion_IoT

./: README.md
Uart_mqtt_santi/: CMakeLists.txt  sdkconfig
Uart_mqtt_santi/components/task_B/: CMakeLists.txt
Uart_mqtt_santi/components/task_B/include/: taskB.h
Uart_mqtt_santi/components/task_B/src/: taskB.c
Uart_mqtt_santi/components/task_C/: CMakeLists.txt
Uart_mqtt_santi/components/task_C/include/: taskC.h
Uart_mqtt_santi/components/task_C/src/: taskC.c
Uart_mqtt_santi/main/: CMakeLists.txt  main.c
santimqtt/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
santimqtt/components/color_shared/include/: color_shared.h
santimqtt/components/led_embebido/: CMakeLists.txt
santimqtt/components/led_embebido/include/: led_embebido.h
santimqtt/components/led_embebido/src/: led_embebido.c
santimqtt/components/led_strip/include/: led_strip.h
santimqtt/components/led_strip/src/: led_strip_rmt_ws2812.c
santimqtt/components/mqtt_module/: CMakeLists.txt  Kconfig  mqtt_module.c
santimqtt/components/mqtt_module/include/: mqtt_module.h
santimqtt/components/mqtt_module/src/: mqtt_module.c
santimqtt/components/task_A/: CMakeLists.txt
santimqtt/components/task_A/include/: taskA.h
santimqtt/components/task_A/src/: taskA.c
santimqtt/components/task_B/: CMakeLists.txt
santimqtt/components/task_B/include/: taskB.h
santimqtt/components/task_C/: CMakeLists.txt
santimqtt/components/wifi_manager/: CMakeLists.txt  Kconfig  wifi_manager.c
santimqtt/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  led_actor.c
(+4 files in other folders)
